@@ -118,6 +118,12 @@ Refactoring: The DBDiff-Plugin's functionality was moved to SQuirreL's core.
 
 Bug fixes:
 
+#1520 "Export Configuration"-Plugin
+  Export button of the "Configure Export" dialog, see menu Plugins --> Export --> "Configure Export",
+  raised NullPointerException.
+  Note that the Alias import/export function, see menu Aliases --> "Import/Export Aliases",
+  may be considered superior to the "Export Configuration"-Plugin.
+
 File export dialog: Fixed missing formatting radio buttons.
 
 Look and Feel Plugin / Nimbus look and feel:
